Fixed empty string response, updated deprecated code